# CHWiGrx

./: .clang-format  .gitignore  CMakeLists.txt  Chess.sln  README.md  TODO.txt  flake.nix
CHWiGrx/: CHWiGrx.aps  CHWiGrx.cpp  CHWiGrx.h  CHWiGrx.rc  CHWiGrx.vcxproj  CHWiGrx.vcxproj.filters  CHWiGrx_declarations.hpp  CHWiGrx_funcs.cpp  CHWiGrx_winproc.cpp  Minimal.ani  Redactor.rc  callbacks.cpp  declarations.hpp  framework.h  framework.hpp  funcs.cpp  main.cpp  old.txt  resource.h  resource.hpp  resource1.h  winproc.cpp
CHWiGrx/callbacks/: curr_choice_figures_list_wndproc.cpp  curr_choice_wndproc.cpp  figure_list_wndproc.cpp  figures_list_wndproc.cpp  main_default_wndproc.cpp  main_edit_state_wndproc.cpp  main_game_state_wndproc.cpp  moves_list_wndproc.cpp
CHWiGrx/src/: create_window.hpp  declarations.hpp  funcs.cpp  main.cpp
ChessCore/: .gitignore  ChessCore.suppress  ChessCore.vcxproj  ChessCore.vcxproj.filters  ChessGame.hpp  FigureBoard.cpp  FigureBoard.h  Stuff.cpp  Stuff.h  TODO.txt  _FigureBoard.cpp  _FigureBoard.h  _Stuff.cpp  _Stuff.h  bot.cpp  bot.h  cexau.h  cpp.hint  enums.hpp  input.hpp  macro.h  pos.hpp
ChessCore/src/: chess_game.hpp
ChessCore/structs/: board_repr.hpp  figure.hpp  figure_board.hpp  figure_fabric.hpp  id.hpp  input.hpp  move_logger.hpp  move_message.hpp  pos.hpp
ChessCore/stuff/: board_repr.cpp  board_repr.h  board_repr.hpp  cexau.h  enums.hpp  figure.cpp  figure.h  figure.hpp  figure_fabric.cpp  figure_fabric.h  figure_fabric.hpp  itoa.hpp  macro.h  move_logger.cpp  move_logger.h  move_logger.hpp  move_rec.cpp  move_rec.h  move_rec.hpp  overload.h  parse_meta.hpp  (+8 more)
Testing/: Testing.cpp  Testing.vcxproj  Testing.vcxproj.filters  pch.hpp
(+60 files in other folders)
